--- a/go/swingo.html
+++ b/go/swingo.html
@@ -134,7 +134,7 @@
 
     <div class="row">
       <div class="col-md-10">
-  <iframe class="gm-iframe" id="gm-area" src="https://bonbang.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
+  <iframe class="gm-iframe" id="gm-area" src="https://sudoku-online.github.io/store77/ovo/" width="810" height="540" scrolling="none" frameborder="0" allowfullscreen></iframe>
    <div style="padding-top: 10px;" class="container" align="Center"> 
       <button  class="btn theme-btn-1 btn-effect-1 text-uppercase" onclick="openFullscreen();">FullScreen</button>
 
@@ -209,7 +209,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tictactoe.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tictactoe.png">
+                            <img src="https://sudoku-online.github.io/img/tictactoe.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -224,7 +224,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/basketball-line.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/basketball-line.png">
+                            <img src="https://sudoku-online.github.io/img/basketball-line.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -239,7 +239,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/pop-it-master.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/pop-it-master.png">
+                            <img src="https://sudoku-online.github.io/img/pop-it-master.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -254,7 +254,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/thumb-fighter.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/thumb-fighter.png">
+                            <img src="https://sudoku-online.github.io/img/thumb-fighter.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -269,7 +269,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/duck-life-3-evolution.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/duck-life-3-evolution.png">
+                            <img src="https://sudoku-online.github.io/img/duck-life-3-evolution.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -284,7 +284,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/eugenes-life.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/eugenes-life.png">
+                            <img src="https://sudoku-online.github.io/img/eugenes-life.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -299,7 +299,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/unicycle-hero.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/unicycle-hero.png">
+                            <img src="https://sudoku-online.github.io/img/unicycle-hero.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -314,7 +314,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/stick-defenders.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/stick-defenders.png">
+                            <img src="https://sudoku-online.github.io/img/stick-defenders.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -329,7 +329,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/flash-tetris.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/flash-tetris.png">
+                            <img src="https://sudoku-online.github.io/img/flash-tetris.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -344,7 +344,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/tiny-fishing.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/tiny-fishing.png">
+                            <img src="https://sudoku-online.github.io/img/tiny-fishing.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -359,7 +359,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/g-switch-3.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/g-switch-3.png">
+                            <img src="https://sudoku-online.github.io/img/g-switch-3.png">
                             <div class="product-badge">       
                             </div>
                         </div>
@@ -374,7 +374,7 @@ function openFullscreen() {
                 <div class="col-lg-2 col-md-4 col-sm-6 col-6">
                     <a href="/go/swingo.html"> 
                        <div class="product-img">
-                            <img src="https://bonbang.github.io/img/swingo.png">
+                            <img src="https://sudoku-online.github.io/img/swingo.png">
                             <div class="product-badge">       
                             </div>
                         </div>
